# VB6_lsp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  build_with_vs.bat
.claude/: settings.local.json
docs/: RESOURCE_FILES.md
src/: lib.rs  main.rs
src/analysis/: builder.rs  mod.rs  position.rs  scope.rs  symbol.rs  symbol_table.rs
src/claude/: mod.rs
src/controls/: colors.rs  frx.rs  mod.rs  properties.rs
src/lsp/: capabilities.rs  document.rs  handlers.rs  mod.rs
src/parser/: ast.rs  converter.rs  lexer.rs  mod.rs  tree_sitter.rs
src/utils/: encoding.rs  mod.rs
src/workspace/: frx_parser.rs  mod.rs  project.rs  res_parser.rs  vbp_parser.rs
tests/: integration_vbp_parsing.rs  test_real_res.rs
tests/fixtures/: README.md
tree-sitter-vb6/: CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  grammar.js  grammar_full.js  grammar_simple.js.bak  package-lock.json  package.json  test_sample.bas  tree-sitter.json
tree-sitter-vb6/bindings/c/: tree-sitter-vb6.pc.in
tree-sitter-vb6/bindings/node/: binding.cc  index.js
tree-sitter-vb6/bindings/rust/: build.rs  lib.rs
tree-sitter-vb6/queries/: highlights.scm  locals.scm  tags.scm
tree-sitter-vb6/src/: grammar.json  node-types.json  scanner.c
tree-sitter-vb6/test/: ANTLR_INTEGRATION.md  TEST_STATUS.md  check_antlr_coverage.ps1  compare_trees_structural.py
tree-sitter-vb6/test/antlr_examples/expressions/: LineContinuationInMemberCallSequence.cls.tree
vb6-mcp-server/: README.md  package-lock.json  package.json
vb6-mcp-server/src/: index.ts
vb6-mcp-server/src/analysis/: builder.ts  index.ts  position.ts  scope.ts  symbolTable.ts  types.ts
vscode-vb6/: extension.js  language-configuration.json  package-lock.json  package.json
