[package]
name = "tree-sitter-vb6"
version = "0.1.0"
description = "VB6/VBA grammar for tree-sitter"
authors = [""]
license = "MIT"
readme = "README.md"
keywords = ["tree-sitter", "parser", "vb6", "vba"]
categories = ["parsing", "text-editors"]
repository = ""
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"
